# devenv-templates

./: flake.nix
modules/: menu.nix
templates/dl-python/: .envrc  .gitignore  Dockerfile  gpujob.sh  pyproject.toml
templates/dl-python/.nix/: flake.nix
templates/minimal-python/: .envrc  .envrc.local  .gitignore  Dockerfile  gpujob.sh  pyproject.toml
templates/minimal-python/.nix/: flake.nix
